os/bluestore: yet another fix for onode's pinning

Presumably fixes: https://tracker.ceph.com/issues/49818
Signed-off-by: Igor Fedotov <ifedotov@suse.com>